fix: cart cep, cart form, cart messages and clearc

--- a/_includes/algolia.html
+++ b/_includes/algolia.html
@@ -68,6 +68,7 @@ const hitTemplate = function(hit) {
 search.addWidget(
   instantsearch.widgets.searchBox({
     container: '#search-searchbar',
+    autofocus: false,
     placeholder: 'Procurar em produtos...',
     poweredBy: true // This is required if you're on the free Community plan
   })
