--- a/_sass/imports/_content.scss
+++ b/_sass/imports/_content.scss
@@ -45,7 +45,7 @@
     right: 0;
     width: 100%;
     height: 100%;
-    transition: var(--mainTransition);
+    transition: all 0.3s linear;
     background: rgba(240, 157, 81, 0.5);
     z-index: 2;
     visibility: hidden;
@@ -60,7 +60,7 @@
     z-index: 3;
     background: rgb(231, 226, 221);
     padding: 1.5rem;
-    transition: var(--mainTransition);
+    transition: all 0.3s linear;
     transform: translateX(100%);
 }
 .showCart {
@@ -84,7 +84,7 @@ float: right;
 .cart h2 {
 text-transform: capitalize;
 text-align: center;
-letter-spacing: var(--mainSpacing);
+letter-spacing: 0.1rem;
 margin-bottom: 2rem;
 }
 /*---------- Cart Item -------------------- */
@@ -102,16 +102,16 @@ margin-bottom: 2rem;
   .cart-item h4 {
     font-size: 0.85rem;
     text-transform: capitalize;
-    letter-spacing: var(--mainSpacing);
+    letter-spacing: 0.1rem;
   }
   .cart-item h5 {
     margin: 0.5rem 0;
-    letter-spacing: var(--mainSpacing);
+    letter-spacing: 0.1rem;
   }
   .cart-item h6 {
     font-size: 0.85rem;
     margin: 0.5rem 0;
-    letter-spacing: var(--mainSpacing);
+    letter-spacing: 0.1rem;
   }
   .item-amount {
     text-align: center;
@@ -125,10 +125,14 @@ margin-bottom: 2rem;
     color: var(--primaryColor);
     cursor: pointer;
   }
+
+  .cep {
+    font-size: 0.6em;
+  }
   /*---------- End of Cart Item -------------------- */
   .cart-footer {
     margin-top: 2rem;
-    letter-spacing: var(--mainSpacing);
+    letter-spacing: 0.1rem;
     text-align: center;
   }
   .cart-footer h3 {
@@ -137,4 +141,70 @@ margin-bottom: 2rem;
   }
   
   /* --------------- End of Cart ---------------- */
+
+  /* --------------- Spinner ---------------- */
+
+  #spinner{
+    visibility: hidden;
+    width: 80px;
+    height: 80px;
   
+    border: 2px solid #f3f3f3;
+    border-top:3px solid #f25a41;
+    border-radius: 100%;
+  
+    position: absolute;
+    top:0;
+    bottom:0;
+    left:0;
+    right: 0;
+    margin: auto;
+  
+    animation: spin 1s infinite linear;
+  }
+  
+  @keyframes spin {
+    from {
+        transform: rotate(0deg);
+    } to {
+        transform: rotate(360deg);
+    }
+  }
+  
+  #spinner.show {
+    visibility: visible;
+  }
+  
+
+/* --------------- End of Spinner ---------------- */
+  
+/* --------------- Form CEP ---------------- */
+.shipping-method {
+  padding: 1.1rem;
+}
+
+.shipping-method h6, .shipping-method label {
+  font-size: .8rem;
+}
+
+.hide-form {
+  visibility: hidden;
+}
+
+.show-form {
+  visibility: visible;
+}
+
+.address {
+  font-size: .6rem;
+  padding: .8rem;
+  border:1px solid #000000cc;
+  background-color: #ffffffee;
+}
+
+.frete {
+  font-size: .8rem;
+  padding: 1rem;
+}
+
+/* --------------- End of Form CEP ---------------- */
