--- a/_sass/imports/_content.scss
+++ b/_sass/imports/_content.scss
@@ -144,35 +144,27 @@ margin-bottom: 2rem;
 
   /* --------------- Spinner ---------------- */
 
-  #spinner{
-    visibility: hidden;
-    width: 80px;
-    height: 80px;
+  .loader {
+    border: 6px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 6px solid #3498db;
+    width: 40px;
+    margin: 0 auto;
+    height: 40px;
+    -webkit-animation: spin 2s linear infinite; /* Safari */
+    animation: spin 2s linear infinite;
+    display:none;
+  }
   
-    border: 2px solid #f3f3f3;
-    border-top:3px solid #f25a41;
-    border-radius: 100%;
-  
-    position: absolute;
-    top:0;
-    bottom:0;
-    left:0;
-    right: 0;
-    margin: auto;
-  
-    animation: spin 1s infinite linear;
+  /* Safari */
+  @-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
   }
   
   @keyframes spin {
-    from {
-        transform: rotate(0deg);
-    } to {
-        transform: rotate(360deg);
-    }
-  }
-  
-  #spinner.show {
-    visibility: visible;
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
   }
   
 
@@ -208,3 +200,20 @@ margin-bottom: 2rem;
 }
 
 /* --------------- End of Form CEP ---------------- */
+
+
+/* --------------- Checkou BUtton ---------------- */
+
+.checkout {
+  visibility: hidden;
+}
+
+.hide {
+  visibility: hidden;
+}
+
+.show {
+  visibility: visible;
+}
+
+/* --------------- End of Checkout Button ---------------- */
