fix: change favicon

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -12,7 +12,7 @@
   {% seo %}
   <link rel="stylesheet" href="{{ site.snipcart_css }}" />
   <link rel="stylesheet" href="{{ 'assets/css/main.css' | relative_url }}">
-  <link rel="icon" type="image/png" href="{{ 'images/favicon.png' | relative_url }}">
+  <link rel="icon" type="image/png" href="{{ 'images/favicon.ico' | relative_url }}">
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/4fd10231e2.js" crossorigin="anonymous"></script>
   <!--Paypal Checkout -->
