feat: parcelamento e à vista. fit: z-indes element

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,7 +44,7 @@
                 </svg>                            
             </button>
             <div class="hamburger__content hamburger__content--closed">
-                <div class="hamburger__options">
+                <!-- <div class="hamburger__options">
                     <button class="snipcart-checkout button button--transparent">
                     <span class="button__icon nav__button-icon">
                         <svg width="24" height="25" viewBox="0 0 24 25" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -60,7 +60,8 @@
                     <svg width="26" height="14" viewBox="0 0 26 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M22.6819 6.07886H0V7.79048H22.8139L18.2402 12.3182L19.434 13.5L26 7L19.434 0.5L18.2402 1.68182L22.6819 6.07886Z" fill="#88DD9B"/>
                     </svg>                            
-                </button>
+                </button> -->
+                <img src="../images/logo-loja1.png" alt="Logo iTechRP">
                 <ul class="hamburger__nav">
                     {% for item in site.menus.main %}
                         {% assign section = page.section | default: page.title %}
