--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -36,6 +36,11 @@
         <!-- cart item -->
         <!-- end of cart item -->
       </div>
+      <div class="in-cash">
+        <div class="avista">
+          <span></span>
+        </div>
+      </div>
       <div class="shipping-method">
         <h6>Simule seu frete:</h6>
         <input 
