--- a/_sass/imports/_content.scss
+++ b/_sass/imports/_content.scss
@@ -47,7 +47,7 @@
     height: 100%;
     transition: all 0.3s linear;
     background: rgba(240, 157, 81, 0.5);
-    z-index: 2;
+    z-index: 11;
     visibility: hidden;
 }
 .cart {
@@ -57,7 +57,7 @@
     width: 100%;
     height: 100%;
     overflow: scroll;
-    z-index: 3;
+    z-index: 12;
     background: rgb(231, 226, 221);
     padding: 1.5rem;
     transition: all 0.3s linear;
@@ -217,3 +217,27 @@ margin-bottom: 2rem;
 }
 
 /* --------------- End of Checkout Button ---------------- */
+
+/* --------------- Parcelas à vista ---------------- */
+
+.in-cash {
+  padding: 2.2rem;
+  margin-bottom: 20px;
+  font-size: .9rem;
+}
+
+.in-cash .avista {
+  margin-bottom:20px;
+  & span {
+    color: green;
+  }
+}
+
+.parcelamento details p {
+  padding: .8rem;
+  margin-bottom: 10px;
+}
+
+/* --------------- Fim Parcelas à vista ---------------- */
+
+
