fix: price in cash in single product page

--- a/_layouts/product.html
+++ b/_layouts/product.html
@@ -39,7 +39,16 @@ layout: body
                 <div class="product__price">
                         R${{ page.price }}
                 </div>
-
+                <div class="installment">
+                    <div class="in-cash">
+                        <div class="avista">
+                            <p class="desconto"></p>
+                        </div>
+                        <div class="parcelado">
+                            <p>Parcelas em até 12x <small>taxa de 1.99% a.m. por parcela</small></p>
+                        </div>
+                    </div>
+                </div>
                 <article class="product__content-product">
                     {{ page.description }}
                 </article>
