--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,6 +17,7 @@
             </li>
             {% endfor %}
         </ul>
+        <!-- PayPal Logo --><table style="margin:auto;" border="0" cellpadding="10" cellspacing="10" align="center"><tr><td align="center"></td></tr><tr><td align="center"><a href="https://www.paypal.com/webapps/mpp/paypal-popup" title="How PayPal Works" onclick="javascript:window.open('https://www.paypal.com/webapps/mpp/paypal-popup','WIPaypal','toolbar=no, location=no, directories=no, status=no, menubar=no, scrollbars=yes, resizable=yes, width=1060, height=700'); return false;"><img src="https://www.paypalobjects.com/webstatic/mktg/logo/AM_mc_vs_dc_ae.jpg" border="0" alt="PayPal Acceptance Mark"></a></td></tr></table><!-- PayPal Logo -->
         <div class="footer__legal-notice"> &copy; 2019 iTechRP. Todos os direitos reservados.</div>
     </div>
     <address class="addr">
