feat: add tel in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,6 +22,7 @@
     </div>
     <address class="addr">
         <p><strong>Endereço:</strong> Rua: São José, 798  - Ribeirão Preto-SP <strong> Contato:</strong> 16 3325-1340 ou contato@itechrp.com.br <strong> CNPJ:</strong> 22.046.867/0001-10</p>
+        <p>Entre em contato pelo nosso whatsapp: <a href="tel: +55 16 996330177">(16) 99633-0177</a></p>
     </address>
     <div class="dev">
         <p>Desenvolvido por <a href="#">Lucas Frutig </a>👽</p>
