--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,78 +1,78 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <title>{{ page.title }}</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    {% seo %}
+    <link rel="stylesheet" href="{{ site.snipcart_css }}" />
+    <link rel="stylesheet" href="{{ 'assets/css/main.css' | relative_url }}" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="{{ 'images/favicon.ico' | relative_url }}"
+    />
+    <!-- Font Awesome -->
+    <script
+      src="https://kit.fontawesome.com/4fd10231e2.js"
+      crossorigin="anonymous"
+    ></script>
+    <!--Paypal Checkout -->
+    <script src="https://www.paypal.com/sdk/js?client-id=AaslbmnY04x_NgMSynuK768r2xEZgdzBb2LbF6cLTefU0MVAh1iidr41MHUBFSuklsA8MmTgf4qqczs0&currency=BRL"></script>
+  </head>
 
-<head>
-
-  <title>
-    {{ page.title }}
-  </title>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  {% seo %}
-  <link rel="stylesheet" href="{{ site.snipcart_css }}" />
-  <link rel="stylesheet" href="{{ 'assets/css/main.css' | relative_url }}">
-  <link rel="icon" type="image/png" href="{{ 'images/favicon.ico' | relative_url }}">
-  <!-- Font Awesome -->
-  <script src="https://kit.fontawesome.com/4fd10231e2.js" crossorigin="anonymous"></script>
-  <!--Paypal Checkout -->
-  <script 
-    src="https://www.paypal.com/sdk/js?client-id=AaslbmnY04x_NgMSynuK768r2xEZgdzBb2LbF6cLTefU0MVAh1iidr41MHUBFSuklsA8MmTgf4qqczs0&currency=BRL">
-  </script>
-
-</head>
-
-<body>
-
-  {{ content }}
-  <!-- cart -->
-  <div class="cart-overlay">
-    <div class="cart">
-      <span class="close-cart">
-        <i class="fas fa-window-close"></i>
-      </span>
-      <h2>seu carrinho</h2>
-      <div class="cart-content">
-        <!-- cart item -->
-        <!-- end of cart item -->
-      </div>
-      <div class="shipping-method">
-        <h6>Simule seu frete:</h6>
-        <input 
-          type="text" 
-          name="cep" 
-          id="cep" 
-          class="input-cep" 
-          placeholder="Informe o CEP"
-          required
-        >
-        <button type="button" value="Calcular" class="calc-cep">Calcular</button>
-      </div>
-      <div class="hide ship">
-        <h5>Escolha sua forma de envio</h5>
-        <label for="sedex">
-          SEDEX <input type="radio" name="envio" id="sedex" value="sedex">
-        </label>
-        <label for="pac">
-          PAC <input type="radio" name="envio" id="pac" value="pac">
-        </label>
-      </div>
-      <div class="loader"></div>
-      <div class="cart-footer">
-        <h3>seu total: R$ <span class="cart-total"></span></h3>
-        <button class="clear-cart banner-btn">Limpar</button>
-      </div>
-      <div class="hide paypal">
-        <div id="paypal-button-container"></div>
+  <body>
+    {{ content }}
+    <!-- cart -->
+    <div class="cart-overlay">
+      <div class="cart">
+        <span class="close-cart">
+          <i class="fas fa-window-close"></i>
+        </span>
+        <h2>seu carrinho</h2>
+        <div class="cart-content">
+          <!-- cart item -->
+          <!-- end of cart item -->
+        </div>
+        <div class="shipping-method">
+          <h6>Simule seu frete:</h6>
+          <input
+            type="text"
+            name="cep"
+            id="cep"
+            class="input-cep"
+            placeholder="Informe o CEP"
+            required
+          />
+          <button type="button" value="Calcular" class="calc-cep">
+            Calcular
+          </button>
+        </div>
+        <div class="hide ship">
+          <h5>Escolha sua forma de envio</h5>
+          <label for="sedex">
+            SEDEX <input type="radio" name="envio" id="sedex" value="sedex" />
+          </label>
+          <label for="pac">
+            PAC <input type="radio" name="envio" id="pac" value="pac" />
+          </label>
+        </div>
+        <div class="loader"></div>
+        <div class="cart-footer">
+          <h3>seu total: R$ <span class="cart-total"></span></h3>
+          <button class="clear-cart banner-btn">Limpar</button>
+        </div>
+        <div class="hide paypal">
+          <div id="paypal-button-container"></div>
+        </div>
       </div>
     </div>
-  </div>
-  <!-- end of cart -->
-  <script src="{{ 'js/main.js' | relative_url }}"></script>
-  <script src="{{ 'js/cart.js' | relative_url }}"></script>
-  <div style="display: none;">
-    {% include buy_button.html product_page=page %}
-  </div>
-</body>
-
+    <!-- end of cart -->
+    <script src="{{ 'js/main.js' | relative_url }}"></script>
+    <script src="{{ 'js/cart.js' | relative_url }}"></script>
+    <div style="display: none">
+      {% include buy_button.html product_page=page %}
+    </div>
+  </body>
 </html>
